--- a/static/sass/Profile/MiniProfile.sass
+++ b/static/sass/Profile/MiniProfile.sass
@@ -26,6 +26,7 @@
 		max-height: $ratio * 14rem
 		height: 11rem
 		justify-content: space-between
+		overflow: hidden
 
 		.artist-avatar
 			height: $ratio * 6rem
